# trackwizz

./: .gitignore  .travis.yml  BDD  BDD.mcd  LICENSE  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md
server/node/: app.js  package.json
server/queries/create/: create_user.sql
server/queries/game/: delete.sql  getOne.sql  insert.sql  update.sql
server/queries/genre/: delete.sql  getAll.sql  getOne.sql  insert.sql  update.sql
server/queries/migrations/: create_game.sql  create_genre.sql  create_playlist.sql  create_rel_playlist_tracks.sql  create_score.sql  create_track.sql  create_user.sql
server/queries/playlist/: delete.sql  getAll.sql  getOne.sql  insert.sql  update.sql
server/queries/rel_playlist_tracks/: delete.sql  getAll.sql  getOne.sql  insert.sql  update.sql
server/queries/score/: delete.sql  getAll.sql  getAllFromGame.sql  getOne.sql  insert.sql  update.sql
server/queries/track/: delete.sql  getAll.sql  getOne.sql  insert.sql  update.sql
server/queries/user/: delete.sql  getAll.sql  getOne.sql  insert.sql  update.sql
server/src/: main.rs  server.rs
server/src/controllers/: game_controller.rs  genre_controller.rs  login_controller.rs  mod.rs  playlist_controller.rs  playlist_tracks_controller.rs  score_controller.rs  test_controller.rs  track_controller.rs  user_controller.rs
server/src/database/: mod.rs
server/src/models/: game_model.rs  genre_model.rs  mod.rs  playlist_model.rs  rel_playlist_tracks.rs  score_model.rs  (+3 more)
(+177 files in other folders)
