[package]
name = "server"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15.2"
dotenv = "0.15.0"
actix-web = "1.0.9"
serde = { version = "1.0.103", features = ["derive"] }
env_logger = "0.7.1"
