[package]
name = "server"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15.2"
dotenv = "0.15.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
serde = { version = "1.0.103", features = ["derive"] }
env_logger = "0.7.1"
serde_repr = "0.1.5"
actix-rt = "1.0.0"
